Further updates of the actual extract

--- a/todolist.html
+++ b/todolist.html
@@ -1,6 +1,8 @@
 <ol>
     <li>Remove excessive repetition in the extract.</li>
     <li>Update the code of actual extract to make it work again.</li>
+    <li>Fix how I determine whether a person is a natural person when storing the data about the shareholders.</li>
+    <li>Some companies do not show the current address (for instance Ostrovká teplárna).</li>
     <li>Update the search results to always show the current data.</li>
     <li>Update the search results to show only current insolvency events.</li>
     <li>Change how the address is stored.</li>
@@ -13,5 +15,6 @@
     <li>Refactor excessive duplications in the main code.</li>
     <li>Break down the main files to smaller ones?</li>
     <li>Add some other minor data to the databases - especially those relating to non-profit companies.</li>
+    <li>Check how to make diacritics work in searches.</li>
     <li>Write some documentation :)</li>
 </ol>
