further update search by legal persons in a role

--- a/todolist.html
+++ b/todolist.html
@@ -1,7 +1,7 @@
 <ol>
-    <li>Add a feature to display legal entities as members of corporate bodies.</li>
     <li>Add a feature to display other types of ownerhsip interests (joint onwership interest, vacant ownership interest).</li>
     <li>Refactor excessive duplications in the main code.</li>
     <li>Check how to make diacritics work in searches.</li>
+    <li>Check if I can remove duplication in results when searching for legal or natural persons in a role.</li>
     <li>Write some documentation :)</li>
 </ol>
